--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ ktor = "2.3.7"
 sqlDelight = "2.0.1"
 lifecycleViewmodelCompose = "2.8.7"
 material3 = "1.3.1"
+coil = "2.4.0"
+koin-android = "3.5.3"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -36,6 +38,9 @@ native-driver = { module = "app.cash.sqldelight:native-driver", version.ref = "s
 runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqlDelight" }
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref="material3" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin-android" }
+koin-android-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin-android" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
