--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,79 +1,22 @@
-#[versions]
-#agp = "8.5.2"
-#kotlin = "2.0.21"
-#compose = "1.7.5"
-#compose-material3 = "1.3.1"
-#androidx-activityCompose = "1.9.3"
-#ksp = "2.0.21-1.0.28"
-#coroutinesVersion = "1.8.0"
-#dateTimeVersion = "0.6.0"
-#hilt = "2.51.1"
-#ktor = "2.3.9"
-#sqlDelight = "2.0.2"
-#lifecycleViewmodelCompose = "2.8.7"
-#coil = "2.6.0"
-#hiltNavigationCompose = "1.2.0"
-#
-#[libraries]
-#kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
-#androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
-#compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
-#compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
-#compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
-#compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
-#
-#android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqlDelight" }
-#hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
-#hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
-#hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
-#hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
-#kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutinesVersion" }
-#kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "dateTimeVersion" }
-#ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktor" }
-#ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
-#ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
-#ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
-#ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
-#native-driver = { module = "app.cash.sqldelight:native-driver", version.ref = "sqlDelight" }
-#runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqlDelight" }
-#androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
-#coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
-#
-#[plugins]
-#android-application = { id = "com.android.application", version.ref = "agp" }
-#android-library = { id = "com.android.library", version.ref = "agp" }
-#kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-#kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-#kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
-#kotlin-cocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
-#compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-#ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
-#
-#kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-#sqldelight = { id = "app.cash.sqldelight", version.ref = "sqlDelight" }
-#hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
-
-
 [versions]
-agp = "8.4.0"
+agp = "8.5.2"
 coilCompose = "2.6.0"
-kotlin = "1.9.23"
+kotlin = "2.0.21"
 junit = "4.13.2"
-testRunner = "1.5.2"
-activityCompose = "1.9.0"
+testRunner = "1.6.2"
+activityCompose = "1.9.3"
 compose-material3 = "1.3.1"
 ktor = "2.3.9"
-composeCompiler = "1.5.13"
-composeBom = "2024.05.00"
-navigationCompose = "2.7.7"
-ksp = "1.9.23-1.0.19"
-kotlinDateTime = "0.5.0"
+composeBom = "2024.11.00"
+navigationCompose = "2.8.4"
+ksp = "2.0.21-1.0.28"
+kotlinDateTime = "0.6.0"
 hilt = "2.51.1"
 hiltNavigationCompose = "1.2.0"
 sqlDelight = "2.0.2"
 assertK = "0.26.1"
 turbine = "0.7.0"
-rules = "1.5.0"
+rules = "1.6.1"
 
 [libraries]
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
@@ -85,7 +28,6 @@ androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
 androidx-compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-#androidx-compose-material = { group = "androidx.compose.material", name = "material" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
@@ -112,6 +54,7 @@ test-rule = { group = "androidx.test", name = "rules", version.ref = "rules" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
